# enacit4r-auth

./: README.md  pyproject.toml
enacit4r_auth/models/: auth.py
enacit4r_auth/services/: admin.py  auth.py
tests/: test_require_role.py
